<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="poster">Poster</string>
    <string name="season_number">%d Seasons</string>
    <string name="length_movie">%d min</string>
    <string name="episode_number">%d Episodes</string>
    <string name="movie_not_found">Movie Not Found</string>
    <string name="tv_show_not_found">Tv Show Not Found</string>
    <string name="favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="search">Search</string>
    <string name="dialog_title">Delete From Favorite</string>
    <string name="dialog_message">Are you sure you want to remove from favorites?</string>
    <string name="delete_success">Successfully removed from favorites</string>
    <string name="add_success">Successfully added to favorites</string>
    <string name="title_a_z">Title(A–Z)</string>
    <string name="title_z_a">Title(Z–A)</string>
    <string name="rating_5_0">Rating(Highest)</string>
    <string name="rating_0_5">Rating(Lowest)</string>
    <string name="random">Random</string>
    <string name="title_favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_tv">Favorite Tv</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="dummy_desc1">Lorem Ipsum is simply dummy text.</string>
    <string name="dummy_desc2">Lorem Ipsum.</string>
    <string name="official_home_page">Official Home Page</string>
    <string name="search_by_title">Search By Title</string>
    <string name="logos">logos</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="find_your_favorite_movie_and_tv">Find Your Favorite Movie and Tv Here!</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="guest">Guest</string>
    <string name="session">Session</string>
    <string name="create_session_first">Create Session First</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="exit_app">Exit</string>
    <string name="enter_email">Enter email</string>
    <string name="valid_email">Enter valid email</string>
    <string name="valid_password">Enter at least 8 character</string>
    <string name="logout_dialog">Are you sure want to logout?</string>
    <string name="email_reset_password">The password reset email has been sent</string>
</resources>