<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.moviecatalogue.ui.popular.movies.PopularMoviesFragment"
        android:label="@string/movie"
        tools:layout="@layout/popular_movies_fragment" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.example.moviecatalogue.ui.popular.tvshows.PopularTvShowFragment"
        android:label="@string/tv"
        tools:layout="@layout/popular_tv_show_fragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.moviecatalogue.ui.search.movies.MoviesFragment"
        android:label="@string/search"
        tools:layout="@layout/movies_fragment" />

    <fragment
        android:id="@+id/navigation_favorite_movie"
        android:name="com.example.moviecatalogue.favorite.movie.FavoriteMovieFragment"
        android:label="@string/favorite_movies"
        tools:layout="@layout/favorite_movie_fragment" />

    <fragment
        android:id="@+id/navigation_favorite_tv"
        android:name="com.example.moviecatalogue.favorite.tvshow.FavoriteTvShowFragment"
        android:label="@string/favorite_tv"
        tools:layout="@layout/favorite_tv_show_fragment" />

</navigation>