<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="16dp"
            android:background="@drawable/background_person"
            android:contentDescription="@string/profile"
            android:elevation="4dp"
            android:src="@drawable/ic_person_pin" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/session"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:text="@string/create_session_first"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"
            android:text="@string/dark_mode"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/exit_app"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>