<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="225dp"
    android:background="@drawable/side_bar_nav"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <ImageView
        android:id="@+id/attr_image"
        android:layout_width="186dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logos"
        android:layout_marginStart="75dp"
        android:src="@drawable/attribute"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/movie_catalogue"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_your_favorite_movie_and_tv"
        android:textSize="14sp" />

</LinearLayout>