<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="180dp"
        app:cardBackgroundColor="@color/image_placeholder" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/card_placeholder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/text_placeholder"
                android:text="@string/dummy_title"
                android:textColor="@color/text_placeholder"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:stepSize="0.1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:ellipsize="end"
                android:background="@color/text_placeholder"
                android:maxLines="2"
                android:text="@string/dummy_desc1"
                android:textColor="@color/text_placeholder"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:ellipsize="end"
                android:background="@color/text_placeholder"
                android:maxLines="2"
                android:text="@string/dummy_desc2"
                android:textColor="@color/text_placeholder"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>